# capytown_G3_s17

./: README.md
ejecutable/: ejecutable.py
mapas_aprendidos/: callejones.csv  intersecciones.csv  mapa_laberinto.json  mapa_laberinto_20260714_161021.json  mapa_laberinto_20260714_161149.json  mapa_laberinto_20260714_161150.json  mapa_laberinto_20260714_162029.json  mapa_laberinto_20260714_162102.json  mapa_laberinto_20260714_162103.json  mapa_laberinto_20260714_164620.json  mapa_laberinto_20260714_164706.json  pares_detectados.csv  ruta_recorrida.csv
src/behavior_fsm/: package.xml  setup.cfg  setup.py
src/behavior_fsm/behavior_fsm/: behavior_fsm.py  wall_follower.py
src/behavior_fsm/launch/: capytown.launch.py
src/behavior_fsm/resource/: behavior_fsm
src/box_detector/: package.xml  setup.cfg  setup.py
src/box_detector/box_detector/: box_detector.py  lidar_utils.py
src/box_detector/resource/: box_detector
src/route_mapper/: package.xml  setup.cfg  setup.py
src/route_mapper/config/: params.yaml
src/route_mapper/launch/: mapping.launch.py
src/route_mapper/resource/: route_mapper
src/route_mapper/route_mapper/: __init__.py  path_mapper.py  route_mapper_node.py
src/utils_scripts/: box_avoidance.py  control_config.py  radar_interface.py  radar_utils.py  viz_scan.py
