<?xml version="1.0"?>
<package format="3">
  <name>route_mapper</name>
  <version>0.0.1</version>
  <description>Memoria de recorrido y mapeo simple LiDAR/Odom para CapyTown.</description>
  <maintainer email="capytown@example.com">CapyTown Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
